# sparse_matrices

./: CMakeLists.txt  README.md  environment-linux.yml  environment-macos.yml  environment-windows.yml  environment.yml
docs/: Doxyfile.in
docs/source/: conf.py  coo_matrix.rst  csc_matrix.rst  csr_matrix.rst  densematrix.rst  diagonal_matrix.rst  index.rst  modules.rst  sparsematrix.rst
include/: COOMatrix.h  CSCMatrix.h  CSRMatrix.h  DenseMatrix.h  DiagonalMatrix.h  SparseMatrix.h
src/: CMakeLists.txt  COOMatrix.cpp  CSCMatrix.cpp  CSRMatrix.cpp  DiagonalMatrix.cpp  SparseMatrix.cpp  main.cpp
src/matrix_generation/: original_matrix.cpp
src/matrix_operations/: matrix_multiplication.cpp
tests/: CMakeLists.txt  test_coo_matrix.cpp  test_csc_matrix.cpp  test_csr_matrix.cpp  test_diagonal_matrix.cpp  test_sparse_matrix.cpp
